--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -66,6 +66,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    namespace 'com.example.tap_sample_app_flutter'
 }
 
 flutter {
@@ -74,18 +75,18 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.google.protobuf:protobuf-javalite:3.20.0'
-    implementation 'io.grpc:grpc-okhttp:1.45.1'
-    implementation('io.grpc:grpc-protobuf-lite:1.45.1') {
+    implementation 'com.google.protobuf:protobuf-javalite:3.21.7'
+    implementation 'io.grpc:grpc-okhttp:1.51.1'
+    implementation('io.grpc:grpc-protobuf-lite:1.51.1') {
         exclude group: 'com.google.protobuf'
     }
-    implementation 'io.grpc:grpc-stub:1.45.1'
-    implementation 'io.reactivex.rxjava3:rxjava:3.0.6'
-    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation 'io.grpc:grpc-stub:1.51.1'
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.6'
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
     //implementation "org.jetbrains.kotlinx:kotlinx-coroutines-rx2:$kotlin_coroutines_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2'
-    implementation "com.brankas.tap:direct-tap:4.1.0"
-    implementation 'androidx.appcompat:appcompat:1.4.2'
-    implementation 'com.google.android.material:material:1.6.1'
-    implementation 'androidx.annotation:annotation:1.4.0'
+    implementation "com.brankas.tap:direct-tap:4.2.1"
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'androidx.annotation:annotation:1.7.1'
 }
